--- a/Content/css/styles.css
+++ b/Content/css/styles.css
@@ -107,6 +107,9 @@ nav {
     padding: 0.75rem 0;
 }
 
+.fa-fw{
+    margin-right: 5px;
+}
 
 /* Responsive Section  */
 @media screen and (min-width: 800px) {
