--- a/Site.Master
+++ b/Site.Master
@@ -3,97 +3,130 @@
 <!DOCTYPE html>
 
 <html lang="en">
+
+
 <head runat="server">
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%: Page.Title %>Rojak jeh la</title>
-      <!-- Google Font  -->
-      <link
+    <title>RojakJeLah</title>
+    <asp:PlaceHolder runat="server">
+        <%: Scripts.Render("~/bundles/modernizr") %>
+    </asp:PlaceHolder>
+   <%-- <webopt:BundleReference runat="server" Path="~/Content/css" />--%>
+    <!-- Google Font  -->
+    <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Josefin+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet">
 
-      <!-- font-awesome -->
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
-      <!-- styles -->
-      <asp:ContentPlaceHolder ID="Stylesheets" runat="server">
-        <link rel="stylesheet" href="css/Master_Style.css" type="text/css" />
-      </asp:ContentPlaceHolder>
+    <!-- font-awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
+    <!-- styles -->
+    <link rel="stylesheet" href="~/Content/css/styles.css" />
 </head>
-<body>
-        <form runat="server">
 
-            <!-- Header Section  -->
-              <header id="home">
-                <!-- navbar -->
-                <nav id="nav">
-                  <div class="nav-center">
-                    <!-- nav header -->
-                    <div class="nav-header">
-                      <img src="image/RojakJelah_w 1.png" class="logo" alt="logo" />
-                      <button class="nav-toggle">
+<body>
+
+    <!-- Header Section  -->
+    <header id="home">
+        <!-- navbar -->
+        <nav id="nav">
+            <div class="nav-center">
+                <!-- nav header -->
+                <div class="nav-header">
+                    <img src="Content/image/RojakJelah_w 1.png" class="logo" alt="logo" />
+                    <button class="nav-toggle">
                         <i class="fas fa-bars"></i>
-                      </button>
-                    </div>
-                    <!-- links -->
-                    <div class="links-container">
-                      <ul class="links">
+                    </button>
+                </div>
+                <!-- links -->
+                <div class="links-container">
+                    <ul class="links">
                         <li>
-                          <a href="About.aspx" class="scroll-link"><i class="fa-solid fa-circle-info"></i> about</a>
+                            <a href="About.aspx" class=""><i class="fa-solid fa-circle-info fa-fw"></i>about</a>
                         </li>
                         <li>
-                          <a href="Dictionary.aspx" class="scroll-link"><i class="fa-solid fa-file-contract"></i> dictionary</a>
+                            <a href="Dictionary.aspx" class=""><i class="fa-solid fa-file-contract fa-fw"></i>dictionary</a>
                         </li>
                         <li>
-                          <a href="Translator.aspx" class="scroll-link"><i class="fa-sharp fa-solid fa-message"></i> translator</a>
+                            <a href="Translator.aspx" class=""><i class="fa-sharp fa-solid fa-message fa-fw"></i>translator</a>
                         </li>
-                      </ul>
-                    </div>
-                  </div>
-                </nav>
-              </header>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+
+    <form runat="server">
 
         <div class="container body-content">
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
             </asp:ContentPlaceHolder>
-              <!-- footer -->
-              <footer class="section">
+            <hr />
+
+            <!-- footer -->
+            <footer class="section">
                 <div class="footer-container">
-                  <div class="footer-left">
-                    <div class="logo">
-                      <img src="./image/RojakJelah_w 1.png" alt="Logo">
-                      <p> <span id="date"></span>. &copy; All rights reserved
-                      </p>
+                    <div class="footer-left">
+                        <div class="logo">
+                            <img src="Content/image/RojakJelah_w 1.png" alt="Logo">
+                            <p>
+                                <span id="date"></span>. &copy; All rights reserved
+                            </p>
+                        </div>
+                        <div class="menu">
+                            <h4>Navigation</h4>
+                            <div class="link">
+                                <a href="/About.aspx" class="scroll-link">about</a>
+                                <a href="/Dictionary.aspx" class="scroll-link">dictionary</a>
+                                <a href="/Translator.aspx" class="scroll-link">translator</a>
+                            </div>
+                        </div>
+                        <div class="menu">
+                            <h4>Privacy</h4>
+                            <div class="link">
+                                <a href="#" class="scroll-link">trams of use</a>
+                                <a href="#" class="scroll-link">privacy policy</a>
+                                <a href="#" class="scroll-link">Cookies</a>
+                            </div>
+                        </div>
                     </div>
-                    <div class="menu">
-                      <h4>Navigation</h4>
-                      <div class="link">
-                        <a href="#About.aspx" class="scroll-link">about</a>
-                        <a href="#Dictionary.aspx" class="scroll-link">dictionary</a>
-                        <a href="#Translator.aspx" class="scroll-link">translator</a>
-                      </div>
+                    <div class="footer-right">
+                        <img src="Content/image/icon_bw_blackbg 1.png" alt="">
                     </div>
-                    <div class="menu">
-                      <h4>Privacy</h4>
-                      <div class="link">
-                        <a href="#About.aspx" class="scroll-link">trams of use</a>
-                        <a href="#Dictionary.aspx" class="scroll-link">privacy policy</a>
-                        <a href="#Translator.aspx" class="scroll-link">Cookies</a>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="footer-right">
-                    <img src="./image/icon_bw_blackbg 1.png" alt="">
-                  </div>
                 </div>
-              </footer>
-           </div>
-           <a class="scroll-link top-link" href="#home">
+            </footer>
+            <a class="scroll-link top-link" href="#home">
                 <i class="fas fa-arrow-up"></i>
-           </a>
-            <!-- javascript -->
-            <script src='<%= ResolveUrl("~/js/script.js") %>'></script>
-       </form>
+            </a>
+        </div>
+
+        <asp:ScriptManager runat="server">
+            <Scripts>
+                <%--To learn more about bundling scripts in ScriptManager see https://go.microsoft.com/fwlink/?LinkID=301884 --%>
+                <%--Framework Scripts--%>
+                <asp:ScriptReference Name="MsAjaxBundle" />
+                <asp:ScriptReference Name="jquery" />
+                <asp:ScriptReference Name="bootstrap" />
+               
+                <asp:ScriptReference Name="WebForms.js" Assembly="System.Web" Path="~/Scripts/WebForms/WebForms.js" />
+                <asp:ScriptReference Name="WebUIValidation.js" Assembly="System.Web" Path="~/Scripts/WebForms/WebUIValidation.js" />
+                <asp:ScriptReference Name="MenuStandards.js" Assembly="System.Web" Path="~/Scripts/WebForms/MenuStandards.js" />
+                <asp:ScriptReference Name="GridView.js" Assembly="System.Web" Path="~/Scripts/WebForms/GridView.js" />
+                <asp:ScriptReference Name="DetailsView.js" Assembly="System.Web" Path="~/Scripts/WebForms/DetailsView.js" />
+                <asp:ScriptReference Name="TreeView.js" Assembly="System.Web" Path="~/Scripts/WebForms/TreeView.js" />
+                <asp:ScriptReference Name="WebParts.js" Assembly="System.Web" Path="~/Scripts/WebForms/WebParts.js" />
+                <asp:ScriptReference Name="Focus.js" Assembly="System.Web" Path="~/Scripts/WebForms/Focus.js" />
+                <asp:ScriptReference Name="WebFormsBundle" />
+                <%--Site Scripts--%>
+            </Scripts>
+        </asp:ScriptManager>
+    </form>
+
+      <asp:PlaceHolder runat="server">
+        <%: Scripts.Render("~/bundles/website") %>
+    </asp:PlaceHolder>
 </body>
 </html>
