--- a/Site.Master
+++ b/Site.Master
@@ -13,29 +13,42 @@
         <%: Scripts.Render("~/bundles/modernizr") %>
     </asp:PlaceHolder>
    <%-- <webopt:BundleReference runat="server" Path="~/Content/css" />--%>
-    <!-- Google Font  -->
-    <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Josefin+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
-        rel="stylesheet">
 
+   <!-- Google Font  -->
+   <link
+     href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Mitr:wght@300;400;500;600;700&family=Rubik:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
 
     <!-- font-awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
+    <!-- Bootstrap Css  -->
+    <link rel="stylesheet" href="./Content/bootstrap.min.css">
+
     <!-- styles -->
-    <link rel="stylesheet" href="~/Content/css/styles.css" />
+    <link rel="stylesheet" href="./Content/css/translator.css" />
+    <link rel="stylesheet" href="./Content/css/dictionary.css" />
+    <link rel="stylesheet" href="./Content/css/about.css" />
+    <link rel="stylesheet" href="./Content/css/login.css" />
+    <link rel="stylesheet" href="./Content/css/register.css" />
+
 </head>
 
 <body>
 
-    <!-- Header Section  -->
+   <!-- Header Section  -->
     <header id="home">
         <!-- navbar -->
         <nav id="nav">
             <div class="nav-center">
                 <!-- nav header -->
                 <div class="nav-header">
-                    <img src="Content/image/RojakJelah_w 1.png" class="logo" alt="logo" />
+                    <a href="Translator.aspx">
+                        <div class="logo">
+                            <img src="/Content/image/logo-icon.png" alt="logo" />
+                            <p>RojakJelah</p>
+                        </div>
+                    </a>
                     <button class="nav-toggle">
                         <i class="fas fa-bars"></i>
                     </button>
@@ -44,13 +57,23 @@
                 <div class="links-container">
                     <ul class="links">
                         <li>
-                            <a href="About.aspx" class=""><i class="fa-solid fa-circle-info fa-fw"></i>about</a>
+                            <a href="About.aspx" class="scroll-link list-group-item active"><i
+                                    class="fa-solid fa-circle-info"></i>
+                                About</a>
                         </li>
                         <li>
-                            <a href="Dictionary.aspx" class=""><i class="fa-solid fa-file-contract fa-fw"></i>dictionary</a>
+                            <a href="Dictionary.aspx" class="scroll-link list-group-item"><i
+                                    class="fa-solid fa-file-contract"></i>
+                                dictionary</a>
                         </li>
                         <li>
-                            <a href="Translator.aspx" class=""><i class="fa-sharp fa-solid fa-message fa-fw"></i>translator</a>
+                            <a href="Translator.aspx" class="scroll-link list-group-item"><i
+                                    class="fa-sharp fa-solid fa-message"></i>
+                                translator</a>
+                        </li>
+                        <li>
+                            <a href="Login.aspx" class="scroll-link list-group-item"><i class="fa-solid fa-right-to-bracket"></i>
+                                Log In</a>
                         </li>
                     </ul>
                 </div>
@@ -58,71 +81,49 @@
         </nav>
     </header>
 
-
-    <form runat="server">
-
+    <!--Main COntent-->
         <div class="container body-content">
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
             </asp:ContentPlaceHolder>
-
-            <!-- footer -->
-            <footer class="section">
-                <div class="footer-container">
-                    <div class="footer-left">
-                        <div class="logo">
-                            <img src="Content/image/RojakJelah_w 1.png" alt="Logo">
-                            <p>
-                                <span id="date"></span>. &copy; All rights reserved
-                            </p>
-                        </div>
-                        <div class="menu">
-                            <h4>Navigation</h4>
-                            <div class="link">
-                                <a href="/About.aspx" class="scroll-link">about</a>
-                                <a href="/Dictionary.aspx" class="scroll-link">dictionary</a>
-                                <a href="/Translator.aspx" class="scroll-link">translator</a>
-                            </div>
-                        </div>
-                        <div class="menu">
-                            <h4>Privacy</h4>
-                            <div class="link">
-                                <a href="#" class="scroll-link">trams of use</a>
-                                <a href="#" class="scroll-link">privacy policy</a>
-                                <a href="#" class="scroll-link">Cookies</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="footer-right">
-                        <img src="Content/image/icon_bw_blackbg 1.png" alt="">
-                    </div>
-                </div>
-            </footer>
-            <a class="scroll-link top-link" href="#home">
-                <i class="fas fa-arrow-up"></i>
-            </a>
         </div>
 
-        <asp:ScriptManager runat="server">
-            <Scripts>
-                <%--To learn more about bundling scripts in ScriptManager see https://go.microsoft.com/fwlink/?LinkID=301884 --%>
-                <%--Framework Scripts--%>
-                <asp:ScriptReference Name="MsAjaxBundle" />
-                <asp:ScriptReference Name="jquery" />
-                <asp:ScriptReference Name="bootstrap" />
-               
-                <asp:ScriptReference Name="WebForms.js" Assembly="System.Web" Path="~/Scripts/WebForms/WebForms.js" />
-                <asp:ScriptReference Name="WebUIValidation.js" Assembly="System.Web" Path="~/Scripts/WebForms/WebUIValidation.js" />
-                <asp:ScriptReference Name="MenuStandards.js" Assembly="System.Web" Path="~/Scripts/WebForms/MenuStandards.js" />
-                <asp:ScriptReference Name="GridView.js" Assembly="System.Web" Path="~/Scripts/WebForms/GridView.js" />
-                <asp:ScriptReference Name="DetailsView.js" Assembly="System.Web" Path="~/Scripts/WebForms/DetailsView.js" />
-                <asp:ScriptReference Name="TreeView.js" Assembly="System.Web" Path="~/Scripts/WebForms/TreeView.js" />
-                <asp:ScriptReference Name="WebParts.js" Assembly="System.Web" Path="~/Scripts/WebForms/WebParts.js" />
-                <asp:ScriptReference Name="Focus.js" Assembly="System.Web" Path="~/Scripts/WebForms/Focus.js" />
-                <asp:ScriptReference Name="WebFormsBundle" />
-                <%--Site Scripts--%>
-            </Scripts>
-        </asp:ScriptManager>
-    </form>
+<!-- footer -->
+  <footer class="footer">
+    <div class="footer-container">
+      <div class="footer-left">
+        <div class="logo">
+          <img src="./Content/image/RojakJelah_w 1.png" alt="Logo">
+          <p> <span id="date"></span>. &copy; All rights reserved
+          </p>
+        </div>
+        <div class="menu">
+          <h4>Navigation</h4>
+          <div class="link">
+            <a href="#translate-details" class="scroll-link">translate-details</a>
+            <a href="#dictionary" class="scroll-link">dictionary</a>
+            <a href="#translator" class="scroll-link">translator</a>
+          </div>
+        </div>
+        <div class="menu">
+          <h4>Privacy</h4>
+          <div class="link">
+            <a href="#translate-details" class="scroll-link">trams of use</a>
+            <a href="#dictionary" class="scroll-link">privacy policy</a>
+            <a href="#translator" class="scroll-link">Cookies</a>
+          </div>
+        </div>
+      </div>
+      <div class="footer-right">
+        <img src="./Content/image/icon_bw_blackbg 1.png" alt="">
+      </div>
+    </div>
+  </footer>
+  <a class="scroll-link top-link" href="#home">
+    <i class="fas fa-arrow-up"></i>
+  </a>
+    <script src=”/Scipts/bootstrap.min.js”></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src=”/Scipts/jquery-3.4.1.min.js”></script>
 
       <asp:PlaceHolder runat="server">
         <%: Scripts.Render("~/bundles/website") %>
