--- a/Content/css/dictionary.css
+++ b/Content/css/dictionary.css
@@ -1,4 +1,256 @@
-﻿/* Header Search / Add Suggest  */
+﻿html {
+    scroll-behavior: smooth;
+}
+
+*,
+::after,
+::before {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: 'Rubik', sans-serif;
+    overflow-x: hidden;
+    width: 85%;
+    margin: auto;
+}
+
+ul {
+    list-style-type: none;
+}
+
+a {
+    text-decoration: none;
+}
+
+
+
+img {
+    max-width: 100%;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: 'Rubik', sans-serif;
+}
+
+a,
+p,
+span,
+button,
+textarea,
+input,
+select,
+option {
+    font-family: 'Mitr', sans-serif;
+}
+
+    input,
+    textarea,
+    button:focus {
+        outline: 0;
+        box-shadow: none;
+    }
+
+/*  global classes */
+/* navbar */
+nav {
+    background: #d35555;
+    padding: 1rem 1.5rem;
+}
+
+/* fixed nav */
+.fixed-nav {
+    position: fixed;
+    top: 0;
+    left: 7.5%;
+    right: 7.5%;
+    width: 85%;
+    background: #d35555;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    z-index: 9999;
+}
+
+    .fixed-nav .links a {
+        color: #fff;
+    }
+
+.links a i {
+    color: #fff;
+    font-size: 17px;
+}
+
+.nav-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.nav-toggle {
+    position: relative;
+    z-index: 9999;
+    font-size: 1.5rem;
+    color: #fff;
+    background: transparent;
+    border-color: transparent;
+    transition: all 0.3s linear;
+    cursor: pointer;
+}
+
+    .nav-toggle:hover {
+        color: hsl(209, 61%, 16%);
+    }
+
+.nav-header .logo {
+    display: flex;
+    align-items: center;
+}
+
+    .nav-header .logo img {
+        width: 60px;
+        margin-top: -2rem;
+    }
+
+    .nav-header .logo p {
+        font-size: 18px;
+        color: #000;
+        font-weight: 600;
+        margin-top: -1rem;
+    }
+
+.links-container {
+    height: 0;
+    overflow: hidden;
+    transition: all 0.3s linear;
+}
+
+.show-links {
+    height: 200px;
+}
+
+.links a {
+    background: transparent;
+    color: #fff;
+    font-size: 17px;
+    text-transform: capitalize;
+    display: block;
+    transition: all 0.3s linear;
+    font-weight: bold;
+    padding: 0.75rem 0;
+}
+
+.scroll-link.active {
+    color: #fff;
+}
+
+/* Responsive Section  */
+@media screen and (min-width: 800px) {
+    nav {
+        background: #d35555;
+        height: 71px;
+        line-height: 53px;
+    }
+
+    .nav-center {
+        width: 85%;
+        max-width: 1170px;
+        margin: 0 auto;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .nav-header {
+        padding: 0;
+    }
+
+
+    .nav-toggle {
+        display: none;
+    }
+
+    .links-container {
+        height: auto !important;
+    }
+
+    .links {
+        display: flex;
+    }
+
+        .links a {
+            background: transparent;
+            color: #fff;
+            font-size: 17px;
+            text-transform: capitalize;
+            display: block;
+            transition: all 0.3s linear;
+            margin: 0 1rem;
+            font-weight: 500;
+            padding: 0;
+        }
+
+
+    .scroll-link.active {
+        content: "";
+        color: #fff;
+        background: linear-gradient(360deg, #E8AC13 -105.09%, #D35555 33.45%);
+        border-bottom: 1px solid #e8ac13;
+    }
+
+    .scroll-link {
+        position: relative;
+    }
+
+
+        .scroll-link::after {
+            content: '';
+            display: block;
+            width: 0;
+            height: 2px;
+            background: linear-gradient(#dac71d, #d39c06);
+            transition: width .3s;
+        }
+
+        .scroll-link:hover::after {
+            width: 100%;
+        }
+}
+
+@media screen and (max-width: 1024px) {
+    body {
+        width: 100%;
+        margin: auto;
+        margin-top: 0;
+    }
+
+    .fixed-nav {
+        left: 0;
+        width: 100%;
+    }
+
+    .nav-center {
+        width: 90vw;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .nav-header .logo img {
+        margin-top: 0;
+    }
+
+    .nav-header .logo p {
+        margin-top: 0;
+    }
+}
+
+
+/* Header Search / Add Suggest  */
 /* Header Search / Add Suggest  */
 /* Header Search / Add Suggest  */
 .dictionary-header {
@@ -368,4 +620,141 @@
         .dictionary-container .dictionary-item .item-content .right-item {
             width: 100%;
         }
+}
+
+/* Footer  */
+footer {
+    margin-top: 2.5rem;
+    background: #323232;
+    padding: 2rem 0 0 0;
+    margin-top: 20px;
+}
+
+    footer .footer-container {
+        display: flex;
+        justify-content: space-between;
+    }
+
+        footer .footer-container .footer-left {
+            width: 80%;
+            display: flex;
+            gap: 40px;
+            padding: 0 2rem;
+        }
+
+            footer .footer-container .footer-left .logo img {
+                width: 250px;
+            }
+
+            footer .footer-container .footer-left .logo p {
+                font-size: 12px;
+            }
+
+
+
+            footer .footer-container .footer-left .menu h4 {
+                color: #fff;
+                text-align: center;
+                border-bottom: 2px solid #fff;
+                padding-bottom: 0.3rem;
+            }
+
+            footer .footer-container .footer-left .menu .link {
+                padding-top: 1rem;
+            }
+
+            footer .footer-container .footer-left .menu a {
+                font-size: 15px;
+                color: #ddd;
+                display: block;
+                padding-top: 0.5rem;
+                text-transform: capitalize;
+            }
+
+        footer .footer-container .footer-right {
+            width: 20%;
+            display: flex;
+            justify-content: right;
+        }
+
+            footer .footer-container .footer-right img {
+                width: 200px;
+            }
+
+    footer p {
+        color: #fff;
+        text-align: center;
+        text-transform: capitalize;
+        margin-bottom: 0;
+    }
+
+@media screen and (max-width: 992px) {
+    footer .footer-container {
+        flex-direction: column;
+    }
+
+        footer .footer-container .footer-left {
+            width: 100%;
+        }
+
+        footer .footer-container .footer-right {
+            width: 100%;
+        }
+
+        footer .footer-container .footer-left .logo {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+        }
+}
+
+@media screen and (max-width: 530px) {
+    footer .footer-container .footer-left {
+        flex-direction: column;
+    }
+
+        footer .footer-container .footer-left .menu {
+            text-align: center;
+        }
+
+            footer .footer-container .footer-left .menu h4 {
+                border-bottom: none;
+            }
+}
+
+.top-link {
+    font-size: 1.25rem;
+    position: fixed;
+    bottom: 3rem;
+    right: 3rem;
+    background: #d35555;
+    width: 2rem;
+    height: 2rem;
+    display: grid;
+    place-items: center;
+    border-radius: 0.5rem;
+    color: #fff;
+    animation: bounce 2s ease-in-out infinite;
+    visibility: hidden;
+    z-index: -100;
+}
+
+.show-link {
+    visibility: visible;
+    z-index: 100;
+}
+
+@keyframes bounce {
+    0% {
+        transform: scale(1);
+    }
+
+    50% {
+        transform: scale(1.5);
+    }
+
+    100% {
+        transform: scale(1);
+    }
 }
