--- a/Site.Master
+++ b/Site.Master
@@ -9,31 +9,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RojakJeLah</title>
-    <asp:PlaceHolder runat="server">
-        <%: Scripts.Render("~/bundles/modernizr") %>
-    </asp:PlaceHolder>
-   <%-- <webopt:BundleReference runat="server" Path="~/Content/css" />--%>
 
    <!-- Google Font  -->
    <link
      href="https://fonts.googleapis.com/css2?family=Mitr:wght@300;400;500;600;700&family=Rubik:wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet">
 
-    <!-- font-awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <!-- font-awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
-    <!-- Bootstrap Css  -->
-    <link rel="stylesheet" href="./Content/bootstrap.min.css">
+  <!-- Bootstrap Css  -->
+  <link rel="stylesheet" href="Content/css/bootstrap.min.css">
 
-    <!-- styles -->
-    <link rel="stylesheet" href="./Content/css/translator.css" />
-    <link rel="stylesheet" href="./Content/css/dictionary.css" />
-    <link rel="stylesheet" href="./Content/css/about.css" />
-    <link rel="stylesheet" href="./Content/css/login.css" />
-    <link rel="stylesheet" href="./Content/css/register.css" />
+  <!-- styles -->
+  <link rel="stylesheet" href="Content/css/styles.css" />
+  <link rel="stylesheet" href="Content/css/about.css" />
+  <link rel="stylesheet" href="Content/css/dictionary.css" />
 
 </head>
-
 <body>
 
    <!-- Header Section  -->
@@ -85,15 +78,13 @@
         <div class="container body-content">
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
             </asp:ContentPlaceHolder>
-        </div>
-
-<!-- footer -->
+  <!-- footer -->
   <footer class="footer">
     <div class="footer-container">
       <div class="footer-left">
         <div class="logo">
-          <img src="./Content/image/RojakJelah_w 1.png" alt="Logo">
-          <p> <span id="date"></span> &copy; All rights reserved
+          <img src="Content/image/RojakJelah_w 1.png" alt="Logo">
+          <p> <span id="date"></span>. &copy; All rights reserved
           </p>
         </div>
         <div class="menu">
@@ -114,20 +105,17 @@
         </div>
       </div>
       <div class="footer-right">
-        <img src="./Content/image/icon_bw_blackbg 1.png" alt="">
+        <img src="Content/image/icon_bw_blackbg 1.png" alt="">
       </div>
     </div>
   </footer>
   <a class="scroll-link top-link" href="#home">
     <i class="fas fa-arrow-up"></i>
   </a>
-    <script src=”/Scripts/Myscripts.script.js”></script>
-    <script src=”/Scripts/bootstrap.min.js”></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script src=”/Scripts/jquery-3.4.1.min.js”></script>
+  <!-- javascript -->
+  <script src="Content/js/bootstrap.min.js"></script>
+  <script src="Content/js/script.js"></script>
 
-      <asp:PlaceHolder runat="server">
-        <%: Scripts.Render("~/bundles/website") %>
-    </asp:PlaceHolder>
+    </form>
 </body>
 </html>
