--- a/Content/css/translator.css
+++ b/Content/css/translator.css
@@ -10,7 +10,6 @@
 .banner .banner-container {
     display: flex;
     align-items: center;
-    padding: 0 2rem;
     max-height: 40vh;
 }
 
@@ -18,7 +17,6 @@
    position: relative;
    width: 40vw;
    min-width: 30vw;
-   left: -2vw;
 
 }
 
@@ -27,17 +25,17 @@
 }
 
 .banner .banner-container .banner-right .title h1 {
-  font-size: 45px;
+  font-size: 55px;
   color: #323232;
   font-weight: 600;
-  line-height: 35px;
   margin: 0;
   margin-bottom: 45px;
+  white-space: nowrap;
 }
 
 .banner .banner-container .banner-right .title span {
-  color: #d35555;
-  border-bottom: 5px solid #d35555;
+  color: var(--primary-color);
+  border-bottom: 5px solid var(--primary-color);
   font-family: 'Mitr', sans-serif;
 }
 
@@ -127,13 +125,12 @@
 }
 
 .translate .title h5 {
-    color: #d35555;
+    color: var(--primary-color);
     font-size: 20px;
 }
 
 .translate .translate-container {
   display: flex;
-  justify-content: space-between;
   align-items: center;
   margin-top: 5px;
 }
@@ -141,15 +138,14 @@
 
 /* Translate Input  */
 .translate .translate-container .context {
-  width: 80%;
-  margin: 5px auto auto auto;
+  flex: 0.82;
   border-radius: 5px;
 }
 
 .translate .translate-container .context textarea {
   width: 100%;
   border: none;
-  border: 1px solid #d35555;
+  border: 1px solid var(--primary-color);
   border-radius: 5px;
   padding: 10px;
   font-size: 18px;
@@ -159,7 +155,7 @@
 .translate .translate-container .context textarea:focus {
   outline: 0;
   box-shadow: none;
-  border: 2px solid #d35555;
+  border: 2px solid var(--primary-color);
 }
 
 
@@ -171,7 +167,7 @@
 }
 
 .translate-output h5 {
-    color: #d35555;
+    color: var(--primary-color);
 }
 
 .translate .translate-output .output {
@@ -207,78 +203,82 @@
 
 /* Translate Button  */
 .translate .translate-container .translate-button {
-    width: 20%;
+    flex: 0.15;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    margin-left: auto;
     flex-direction: column;
 }
 
 .btnTranslate {
     font-weight: 600;
-    border: 2px solid #d35555;
-    background: #d35555;
+    border: 2px solid var(--primary-color);
+    background: var(--primary-color);
     color: #ffff;
-    font-size: 20px;
-    padding: 5px 20px;
+    font-size: 16px;
+    padding: 10px 15px;
     border-radius: 5px;
     transition: 0.4s;
 }
 
-.btnTranslate:focus {
-    background: #e29090;
-    border: 2px solid #e29090;
+.btnTranslate:hover {
+    background: var(--primary-color-hover);
+    border: 2px solid var(--primary-color-hover);
+}
+
+.btnTranslate:active {
+    background: var(--primary-color-active);
+    border: 2px solid var(--primary-color-active);
 }
 
 .translate .translate-container .translate-button button:hover {
-  background: #da4343;
+    background: var(--primary-color-hover);
+    border: 2px solid var(--primary-color-hover);
 }
 
-.translate .translate-container .translate-button button:focus{
-    background: #e29090;
+.translate .translate-container .translate-button button:active {
+    background: var(--primary-color-active);
+    border: 2px solid var(--primary-color-active);
 }
 
 .translate .translate-container .translate-button .translate-user {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+    display: flex;
+    margin-top: 10px;
+    align-items: center;
 }
 
 .translate .translate-container .translate-button .translate-user div.button {
-  padding: 5px;
+  margin: auto;
 }
 
 .translate .translate-container .translate-button .translate-user button i {
-  color: #d35555;
+    color: var(--primary-color);
+    transition: all 0.3s ease-out;
 }
 
 .translate .translate-container .translate-button .translate-user button {
   border: none;
-  border: 2px solid #d35555;
+  border: 2px solid var(--primary-color);
   padding: 5px 7px;
   background: none;
   border-radius: 5px;
-  transition: all 0.4s ease-out;
+  transition: all 0.3s ease-out;
 }
 
 .translate .translate-container .translate-button .translate-user button:hover {
-  border-color: #e29090;
+    border-color: var(--primary-color-hover);
 }
 
-.translate .translate-container .translate-button .translate-user button:focus {
-  border-color: #f2cccc;
+.translate .translate-container .translate-button .translate-user button:active {
+    border-color: var(--primary-color-active);
 }
 
 .translate .translate-container .translate-button .translate-user button:hover i {
-  color: #e29090;
-
+  color: var(--primary-color-hover);
 }
 
-.translate .translate-container .translate-button .translate-user button:focus i {
-  color: #f2cccc;
-
+.translate .translate-container .translate-button .translate-user button:active i {
+  color: var(--primary-color-active);
 }
-
 
 /* Saved Translate  */
 .translate .translate-container .translate-button .translate-user .saved div#saved {
@@ -286,7 +286,7 @@
 }
 
 .translate-button .translate-user .saved .modal-title {
-  color: #d35555 !important;
+  color: var(--primary-color) !important;
   font-size: 30px;
   font-family: 'Rubik', sans-serif;
   font-size: 600;
@@ -315,7 +315,7 @@
 }
 
 .translate-button .translate-user .saved .modal-body .body-top h2 {
-  color: #d35555;
+  color: var(--primary-color);
   font-size: 20px;
 }
 
@@ -335,14 +335,14 @@
 }
 
 .translate-button .translate-user .saved .modal-body .body-top .click-btn h3 {
-  color: #d35555;
+  color: var(--primary-color);
   font-size: 15px;
 }
 
 .translate-button .translate-user .saved .modal-body .body-top .click-btn button {
   font-weight: 600;
   border: none;
-  background: #d35555 !important;
+  background: var(--primary-color) !important;
   color: #ffff;
   font-size: 15px;
   padding: 5px 20px;
@@ -372,7 +372,7 @@
 }
 
 .translate .translate-container .translate-button .translate-user .saved .btn-close:focus {
-  border: 1px solid #d35555;
+  border: 1px solid var(--primary-color);
 }
 
 
@@ -382,7 +382,7 @@
 }
 
 .translate-button .translate-user .history .modal-title {
-  color: #d35555 !important;
+  color: var(--primary-color) !important;
   font-size: 30px;
   font-family: 'Rubik', sans-serif;
   font-size: 600;
@@ -394,7 +394,7 @@
 }
 
 .translate-button .translate-user .history .modal-body .body-top h2 {
-  color: #d35555;
+  color: var(--primary-color);
   font-size: 20px;
 }
 
@@ -414,14 +414,14 @@
 }
 
 .translate-button .translate-user .history .modal-body .body-top .click-btn h3 {
-  color: #d35555;
+  color: var(--primary-color);
   font-size: 15px;
 }
 
 .translate-button .translate-user .history .modal-body .body-top .click-btn button {
   font-weight: 600;
   border: none;
-  background: #d35555 !important;
+  background: var(--primary-color) !important;
   color: #ffff;
   font-size: 15px;
   padding: 5px 20px;
@@ -461,7 +461,7 @@
 }
 
 .translate-button .translate-user .report .modal-title {
-  color: #d35555 !important;
+  color: var(--primary-color) !important;
   font-size: 30px;
   font-family: 'Rubik', sans-serif;
   font-size: 600;
@@ -478,7 +478,7 @@
 }
 
 .translate-button .translate-user .report .modal-body .body-top h4 {
-  color: #d35555;
+  color: var(--primary-color);
   font-size: 20px;
 }
 
@@ -486,14 +486,14 @@
   padding: 7px 20px;
   font-size: 20px;
   border: none;
-  border: 1px solid #d35555;
+  border: 1px solid var(--primary-color);
 }
 
 .translate-button .translate-user .report .modal-body .body-top form select:focus {
   outline: 0;
   box-shadow: none;
   border: none;
-  border: 2px solid #d35555;
+  border: 2px solid var(--primary-color);
 }
 
 .translate-button .translate-user .report .modal-body .body-top form textarea {
@@ -501,14 +501,14 @@
   width: 100%;
   font-size: 18px;
   border: none;
-  border: 1px solid #d35555;
+  border: 1px solid var(--primary-color);
 }
 
 .translate-button .translate-user .report .modal-body .body-top form textarea:focus {
   outline: 0;
   box-shadow: none;
   border: none;
-  border: 2px solid #d35555;
+  border: 2px solid var(--primary-color);
 }
 
 
@@ -521,12 +521,12 @@
 .translate-button .translate-user .report .modal-body .body-top form button.cancel {
   font-weight: 600;
   border: none;
-  border: 2px solid #d35555;
+  border: 2px solid var(--primary-color);
   width: 100px;
   background: none;
   border-radius: 5px;
   transition: 0.4s;
-  color: #d35555;
+  color: var(--primary-color);
 }
 
 .translate-button .translate-user .report .modal-body .body-top form button.cancel:hover {
@@ -541,7 +541,7 @@
   font-weight: 600;
   width: 100px;
   border: none;
-  background: #d35555;
+  background: var(--primary-color);
   color: #ffff;
   font-size: 20px;
   padding: 5px 20px;
@@ -669,7 +669,7 @@
 }
 
 .user-generate .generate-container {
-  border: 4px dashed #d35555;
+  border: 4px dashed var(--primary-color);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -694,7 +694,7 @@
   font-size: 60px;
   font-weight: 800;
   text-align: center;
-  color: #d35555;
+  color: var(--primary-color);
 }
 
 .user-generate .generate-container .generate-items .item h1 .strikethrough {
@@ -707,7 +707,7 @@
   left: 0;
   top: 50%;
   right: 0;
-  border-top: 4px solid #d35555 !important;
+  border-top: 4px solid var(--primary-color) !important;
   border-color: inherit;
   -webkit-transform: rotate(-70deg);
   -moz-transform: rotate(-70deg);
@@ -783,7 +783,7 @@
   text-align: center;
   font-weight: 600;
   border: none;
-  background: #d35555;
+  background: var(--primary-color);
   color: #ffff;
   font-size: 20px;
   padding: 15px 25px;
@@ -793,9 +793,9 @@
 }
 
 .learn-more a:hover {
-  background: #da4343;
+    background: var(--primary-color-hover);
 }
 
-.learn-more a:focus {
-  background: #e29090;
+.learn-more a:active {
+  background: var(--primary-color-active);
 }
