--- a/Content/css/master.css
+++ b/Content/css/master.css
@@ -6,6 +6,7 @@
     --primary-color-hover: #E39090;
     --primary-color-active: #F2CCCC;
     --secondary-color-yellow: #FFF96D;
+    --theme-white: #f5f5f5;
 }
 
 html {
